--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.4
-loader_version=0.14.24
+minecraft_version=1.21
+yarn_mappings=1.21+build.1
+loader_version=0.15.11
 
 # Mod Properties
-mod_version=1.0.1
+mod_version=1.0.2
 maven_group=me.wolfii
-archives_base_name=SpeedFOVLimiter
+archives_base_name=SpeedFOVLimiter+1.21
 
 #Dependencies
-fabric_version=0.90.7+1.20.2
-modmenu_version=8.0.0
-yetanotherconfiglib_version=3.3.0-beta.1+1.20.2
+modmenu_version=11.0.0-beta.1
+yetanotherconfiglib_version=3.5.0+1.21-fabric
